Fixes + REI stuff