@@ -25,11 +25,18 @@
 package com.github.mixinors.astromine.client.rei.refining;
 
 import com.github.mixinors.astromine.client.rei.AMRoughlyEnoughItemsPlugin;
+import com.github.mixinors.astromine.client.rei.EnergyConsumingDisplay;
 import com.github.mixinors.astromine.common.recipe.RefiningRecipe;
-import com.github.mixinors.astromine.common.volume.fluid.FluidVolume;
+import com.github.mixinors.astromine.common.recipe.ingredient.FluidIngredient;
+import com.github.mixinors.astromine.common.recipe.result.FluidResult;
+import dev.architectury.fluid.FluidStack;
+
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
 import me.shedaniel.rei.api.common.display.Display;
 import me.shedaniel.rei.api.common.entry.EntryIngredient;
+import me.shedaniel.rei.api.common.entry.type.VanillaEntryTypes;
+import me.shedaniel.rei.api.common.util.EntryIngredients;
+
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.util.Identifier;
@@ -38,47 +45,19 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Environment(EnvType.CLIENT)
-public class RefiningDisplay implements Display {
-	private final double energy;
-	private final FluidIngredient input;
-	private final FluidVolume output;
-	private final Identifier id;
-
-	public RefiningDisplay(double energy, FluidIngredient input, FluidVolume output, Identifier id) {
-		this.energy = energy;
-		this.input = input;
-		this.output = output;
-		this.id = id;
-	}
-
+public class RefiningDisplay extends EnergyConsumingDisplay {
 	public RefiningDisplay(RefiningRecipe recipe) {
-		this(recipe.getEnergyInput(), recipe.getIngredient(), recipe.getFluidOutput(), recipe.getId());
-	}
-
-	@Override
-	public Optional<Identifier> getDisplayLocation() {
-		return Optional.ofNullable(id);
-	}
-
-	@Override
-	public List<EntryIngredient> getInputEntries() {
-		return Collections.singletonList(EntryIngredient.of(Arrays.stream(input.getMatchingVolumes()).map(AMRoughlyEnoughItemsPlugin::convertToEntryStack).collect(Collectors.toList())));
-	}
-
-	@Override
-	public List<EntryIngredient> getOutputEntries() {
-		return Collections.singletonList(EntryIngredient.of(AMRoughlyEnoughItemsPlugin.convertToEntryStack(output)));
+		super(
+				Collections.singletonList(EntryIngredients.of(VanillaEntryTypes.FLUID, Arrays.stream(recipe.getInput().getMatchingVariants()).map(variant -> FluidStack.create(variant.getFluid(), recipe.getInput().getAmount())).toList())),
+				Collections.singletonList(EntryIngredients.of(recipe.getFluidOutput().toStack())),
+				recipe.getTime(), recipe.getEnergyInput(), recipe.getId()
+		);
 	}
 
 	@Override
 	public CategoryIdentifier<?> getCategoryIdentifier() {
 		return AMRoughlyEnoughItemsPlugin.REFINING;
-	}
-
-	public double getEnergy() {
-		return energy;
 	}
 }
