@@ -25,61 +25,31 @@
 package com.github.mixinors.astromine.client.rei.solidifying;
 
 import com.github.mixinors.astromine.client.rei.AMRoughlyEnoughItemsPlugin;
-import com.github.mixinors.astromine.client.rei.generating.AbstractEnergyGeneratingDisplay;
+import com.github.mixinors.astromine.client.rei.EnergyConsumingDisplay;
 import com.github.mixinors.astromine.common.recipe.SolidifyingRecipe;
+import dev.architectury.fluid.FluidStack;
+
 import me.shedaniel.rei.api.common.category.CategoryIdentifier;
-import me.shedaniel.rei.api.common.entry.EntryIngredient;
+import me.shedaniel.rei.api.common.entry.type.VanillaEntryTypes;
 import me.shedaniel.rei.api.common.util.EntryIngredients;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
-import net.minecraft.fluid.Fluid;
-import net.minecraft.item.ItemStack;
-import net.minecraft.util.Identifier;
 
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Environment(EnvType.CLIENT)
-public class SolidifyingDisplay extends AbstractEnergyGeneratingDisplay {
-	private final FluidIngredient input;
-	private final ItemStack output;
-	private final Identifier id;
-
+public class SolidifyingDisplay extends EnergyConsumingDisplay {
 	public SolidifyingDisplay(SolidifyingRecipe recipe) {
-		super(recipe.getEnergyInput());
-		this.input = recipe.getInput();
-		this.output = recipe.getOutput();
-		this.id = recipe.getId();
-	}
-
-	@Override
-	public List<EntryIngredient> getInputEntries() {
-		return Collections.singletonList(EntryIngredient.of(Arrays.stream(input.getMatchingVolumes()).map(AMRoughlyEnoughItemsPlugin::convertToEntryStack).collect(Collectors.toList())));
-	}
-
-	@Override
-	public List<EntryIngredient> getOutputEntries() {
-		return Collections.singletonList(EntryIngredients.of(output));
+		super(
+				Collections.singletonList(EntryIngredients.of(VanillaEntryTypes.FLUID, Arrays.stream(recipe.getInput().getMatchingVariants()).map(variant -> FluidStack.create(variant.getFluid(), recipe.getInput().getAmount())).toList())),
+				Collections.singletonList(EntryIngredients.of(recipe.getItemOutput().toStack())),
+				recipe.getTime(), recipe.getEnergyInput(), recipe.getId()
+		);
 	}
 
 	@Override
 	public CategoryIdentifier<?> getCategoryIdentifier() {
-		return AMRoughlyEnoughItemsPlugin.SOLID_GENERATING;
-	}
-
-	public Fluid getFluid() {
-		return input.getMatchingVolumes()[0].getFluid();
-	}
-
-	public long getAmount() {
-		return input.getMatchingVolumes()[0].getAmount();
-	}
-
-	@Override
-	public Optional<Identifier> getDisplayLocation() {
-		return Optional.ofNullable(this.id);
+		return AMRoughlyEnoughItemsPlugin.SOLIDIFYING;
 	}
 }
